--- a/home.html
+++ b/home.html
@@ -43,19 +43,19 @@
         <div class="stacked-parent">
 
             <!-- Main Video -->
-            <div class="stacked no-show" id="main_video">
-                <video class="std" id="landing_video" controls>
+            <div class="stacked">
+                <video class="collapsed std" id="landing_video" controls>
                     <source src="video/Landing Video.mp4" type="video/mp4">
                 </video>
             </div>
 
             <!-- Video Cover -->
-            <div class="stacked no-show" id="video_cover">
-                <img src="img/landing_video_cover.png" id="landing_cover">
+            <div class="stacked">
+                <img class="collapsed" src="img/landing_video_cover.png" id="video_cover">
             </div>
 
             <!-- Loading Screen -->
-            <div class="stacked" id="loading_screen">
+            <div class="stacked">
                 <video class="std" id="title_video" autoplay muted>
                     <source src="video/Title Video.mp4" type="video/mp4">
                 </video>
