--- a/home.html
+++ b/home.html
@@ -17,11 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
     <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="style/page.css" />
     <link rel="stylesheet" type="text/css" href="style/font.css" />
-    <link rel="stylesheet" type="text/css" href="style/var.css" />
-    <link rel="stylesheet" type="text/css" href="style/video.css" />
-    <link rel="stylesheet" type="text/css" href="style/div.css" />
-    <link rel="stylesheet" type="text/css" href="style/img.css" />
+    <link rel="stylesheet" type="text/css" href="style/media.css" />
     <link rel="stylesheet" type="text/css" href="style/buttons.css" />
 
     <!-- Meta -->
@@ -51,7 +49,7 @@
 
             <!-- Video Cover -->
             <div class="stacked">
-                <img class="collapsed" src="img/landing_video_cover.png" id="video_cover">
+                <img class="collapsed" src="img/landing_cover.png" id="video_cover">
             </div>
 
             <!-- Loading Screen -->
