empire video page

--- a/html/empire.html
+++ b/html/empire.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Evolved Deck-Building | Titans Of Eden</title>
+        <title>Empire Setup System | Titans Of Eden</title>
         <!-- html/partial/include.html -->
-        <style>div.header_footer {opacity: 0;}</style>
     </head>
     <body>
 
@@ -18,21 +17,12 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="media/landing_video.mp4" type="video/mp4">
+                            <source src="media/empire_video.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <!-- Video Cover -->
-                    <div class="stacked">
-                        <img class="collapsed" src="media/landing_cover.png" id="video_cover">
-                    </div>
-
-                    <!-- Loading Screen -->
-                    <div class="stacked">
-                        <video class="std" id="loading_video" autoplay muted>
-                            <source src="media/title_video.mp4" type="video/mp4">
-                        </video>
-                    </div>
+                    <img class="std" src="media/empire_cover.png" id="video_cover">
                 </div>
             </div>
         </div>
@@ -41,7 +31,6 @@
         <!-- html/partial/footer.html -->
 
         <!-- Scripts -->
-        <script type="text/javascript" src="script/loading_screen.js"></script>
         <script type="text/javascript" src="script/video_cover.js"></script>
 
     </body>
