updating page titles

--- a/html/constructed.html
+++ b/html/constructed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Empire Setup System | Titans Of Eden</title>
+        <title>Constructed Format | Titans Of Eden</title>
         <!-- html/partial/include.html -->
     </head>
     <body>
