text blocks / gameplay text

--- a/html/privacy.html
+++ b/html/privacy.html
@@ -9,7 +9,7 @@
         <!-- Header -->
         <!-- html/partial/header.html -->
 
-        <!-- Demo -->
+        <!-- Body -->
         <div class="centered text-block">
             <p class="h1">Privacy Policy</p>
             <p class="p1 justified">
