--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -15,15 +15,18 @@
             <p class="p0">
                 Start the game with a deck of Monks and Wizards.
             </p>
+            <img class="partial" src="media/starting_hand.png">
             <p class="p0 justified">
                 Each turn, you get to play 3 cards, at the same time as your opponent. Use your Wizards to wage war, and your Monks to add elemental cards with powerful abilities to your deck. (You'll get to use these new elemental cards in future turns.)
             </p>
+            <img class="full" src="media/awaken.png">
             <p class="p0 justified">
                 There are many kinds of abilities: Some help you by adding cards to your hand or by letting you play additional cards; others hurt your opponent by adding ghosts to their deck or by canceling their cards' abilities.
             </p>
             <p class="p0 justified">
                 There are four main elements in Eden: Storm, Fire, Ice, and Rock. The strategy and abilities of each element are designed to be strong against one other element. Use this to your advantage: If your opponent goes for an Ice strategy, play Fire cards to undermine and overpower them. (Because of this, there is always a way for you to respond to your opponent's strategy.)
             </p>
+            <img class="partial" src="media/super_effective_chain.png">
             <p class="p0 justified">
                 At the end of each turn, you battle your opponent for control over Eden. Once you destroy your opponent's 3 temples, you win the game. This victory condition keeps all players engaged until the end: You're never more than 3 turns from winning the game, and you can always come back, no matter how far behind you are. That's a two-edged sword, though: You can never become comfortable with your lead, because you're never more than 3 turns from being defeated. If you're being aggressive, your opponent can't just ignore you for some long-term strategy (which works in many other deck-building games).
             </p>
