--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Online Demo | Titans Of Eden</title>
+        <title>Gameplay Overview | Titans Of Eden</title>
         <!-- html/partial/include.html -->
     </head>
     <body>
