revamping for a more engaging narrative; using new file structure

--- a/html/constructed-text.html
+++ b/html/constructed-text.html
@@ -12,6 +12,12 @@
         <!-- Body -->
         <div class="centered padded text-block">
             <p class="h1">Constructed Format</p>
+            <p class="p0 centered"><a href="constructed" class="link">Watch the video overview!</a></p>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/constructed_clip.mp4">
+            </video>
+            <br/>
             <p class="p0 justified">
                 One thing we love about deck-building games (like Dominion and Star Realms) is that everyone starts on the same footing: Each player starts with the same basic cards and has access to the same card piles to improve their deck. All the cards you can play with are included in a single set (or in a few expansions), and you don't gain an advantage by spending more money on the game. (There's no pay-to-win features.) Winning depends a lot on strategy, and a little on luck, which is just plain fun.
             </p>
@@ -24,7 +30,9 @@
             <p class="p0 justified">
                 The constructed format is different: At the start of the game, you don't lay out any Ritual Piles. Instead, each player builds a Spellbook before playing. This Spellbook can consist of any 32 cards. Then, each player starts the game with a basic deck of Monks and Wizards. Whenever a player plays a Monk, they awaken a card from their own Spellbook (instead of from a shared Ritual Pile). (This format is EPIC for 6-player/3-arena games.)
             </p>
-            <img class="full" src="media/constructed_6p.png">
+            <br/>
+            <img class="full" src="img/constructed_6p.png">
+            <br/>
             <p class="p0 justified">
                 This constructed format adds a depth of strategy to Titans Of Eden by letting each player choose which cards they want to play with. Because your opponents can play literally any card in the entire game, you have to build a Spellbook that can respond to anything. This advanced format is meant for competitive and tournament play. And, as we plan to release expansions on an annual basis, the competitive scene for Titans Of Eden will quickly grow.
             </p>
