--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -11,28 +11,56 @@
 
         <!-- Body -->
         <div class="centered padded text-block">
-            <p class="h1">Gameplay Overview</p>
-            <p class="p0">
-                Start the game with a deck of Monks and Wizards.
-            </p>
-            <img class="partial" src="media/starting_hand.png">
+            <img class="partial" src="img/summoning.png">
             <p class="p0 justified">
-                Each turn, you get to play 3 cards, at the same time as your opponent. Use your Wizards to wage war, and your Monks to add elemental cards with powerful abilities to your deck. (You'll get to use these new elemental cards in future turns.)
+                Titans Of Eden is a fast-paced deck-building card game for 2-6 players.
+                We created <i>Titans</i> because we love deck-building games, but we often get frustrated by how slow and unbalanced other games can feel, and how limited their strategies tend to be. <b>Titans Of Eden stands out because of its:</b>
             </p>
-            <img class="full" src="media/awaken.png">
+            <br/>
+            <img class="full" src="img/awaken.png">
+            <br/>
             <p class="p0 justified">
-                There are many kinds of abilities: Some help you by adding cards to your hand or by letting you play additional cards; others hurt your opponent by adding ghosts to their deck or by canceling their cards' abilities.
+                <b>Interactive Gameplay:</b><br/><br/>
+                Virtually every card has one or more abilities, and most abilities are designed to interact with your opponents. Additionally, just about all the cards you can add to your deck belong to one of the four main elements, and the strategies and abilities of each element are designed to counteract one other element.
             </p>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/interactive_clip.mp4">
+            </video>
+            <br/>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/elements_clip.mp4">
+            </video>
+            <br/>
             <p class="p0 justified">
-                There are four main elements in Eden: Storm, Fire, Ice, and Rock. The strategy and abilities of each element are designed to be strong against one other element. Use this to your advantage: If your opponent goes for an Ice strategy, play Fire cards to undermine and overpower them. (Because of this, there is always a way for you to respond to your opponent's strategy.)
+                <b>Balanced Set-Up System:</b><br/><br/>
+                Titans Of Eden uses the <a href="empire-text" class="link">Empire Setup System</a>, which ensures that every game contains multiple balanced strategies and counter-strategies. This make it so that your opponent has to engage with you: They can't just ignore what you're doing to focus on their own strategy.
             </p>
-            <img class="partial" src="media/super_effective_chain.png">
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/empire_clip.mp4">
+            </video>
+            <br/>
             <p class="p0 justified">
-                At the end of each turn, you battle your opponent for control over Eden. Once you destroy your opponent's 3 temples, you win the game. This victory condition keeps all players engaged until the end: You're never more than 3 turns from winning the game, and you can always come back, no matter how far behind you are. That's a two-edged sword, though: You can never become comfortable with your lead, because you're never more than 3 turns from being defeated. If you're being aggressive, your opponent can't just ignore you for some long-term strategy (which works in many other deck-building games).
+                <b>Rapid-Fire Gameplay:</b><br/><br/>
+                Titans Of Eden uses the <a href="nowait-text" class="link">No-Wait Play System</a>, which has all players playing cards every single turn. Unlike other deck-building games, you don't have to spend ~75% of your time just waiting for youur opponents to go.
             </p>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/nowait_clip.mp4">
+            </video>
+            <br/>
             <p class="p0 justified">
-                You have to play to win, every turn, because you're always on the brink of victory, and on the precipice of defeat.
+                <b>Depth Of Strategy:</b><br/><br/>
+                Titans Of Eden is a very strategic game. After you master the base game, check out the <a href="constructed-text" class="link">Constructed Format</a>, which lets you build your own spellbook before playing.
             </p>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/constructed_clip.mp4">
+            </video>
+            <br/>
+            <p class="p0 centered">Don't just take our word for it, though: Try the <a href="online" class="link">Online Demo</a> today!</p>
             <br/>
         </div>
 
