--- a/html/landing.html
+++ b/html/landing.html
@@ -18,19 +18,19 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="media/landing_video.mp4" type="video/mp4">
+                            <source src="vid/landing_video.mp4">
                         </video>
                     </div>
 
                     <!-- Video Cover -->
                     <div class="stacked">
-                        <img class="collapsed" src="media/landing_cover.png" id="video_cover">
+                        <img class="collapsed" src="img/landing_cover.png" id="video_cover">
                     </div>
 
                     <!-- Loading Screen -->
                     <div class="stacked">
                         <video class="std" id="loading_video" autoplay muted>
-                            <source src="media/title_video.mp4" type="video/mp4">
+                            <source src="vid/title_video.mp4">
                         </video>
                     </div>
                 </div>
