--- a/html/constructed.html
+++ b/html/constructed.html
@@ -17,12 +17,12 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="media/constructed_video.mp4" type="video/mp4">
+                            <source src="vid/constructed_video.mp4" type="video.mp4">
                         </video>
                     </div>
 
                     <!-- Video Cover -->
-                    <img class="std" src="media/constructed_cover.png" id="video_cover">
+                    <img class="std" src="img/constructed_cover.png" id="video_cover">
                 </div>
             </div>
         </div>
