--- a/html/nowait-text.html
+++ b/html/nowait-text.html
@@ -12,22 +12,32 @@
         <!-- Body -->
         <div class="centered padded text-block">
             <p class="h1">The No-Wait Play System</p>
+            <p class="p0 centered"><a href="nowait" class="link">Watch the video overview!</a></p>
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/nowait_clip.mp4">
+            </video>
+            <br/>
             <p class="p0 justified">
                 In just about every tabletop game, players take turns, and on their turns they get to do one or more actions. In some of the more exciting games, you can react to your opponents' actions on their turns, countering their moves and undermining their strategies. Most of the time, though, in most games, you just kind of... wait.. for... them... to... finish.
             </p>
             <p class="p0 justified">
                 Titans Of Eden offers a better way: Players don't have their own turns at all. Instead, turns are split into ages. During each age, every player simultaneously plays a card. (Everyone plays a card facedown, then all facedown cards are simultaneously flipped faceup.)
             </p>
-            <video class="std" autoplay muted>
-                <source src="media/card_flip.mp4" type="video/mp4">
+            <br/>
+            <video class="std" autoplay loop muted>
+                <source src="vid/card_flip.mp4">
             </video>
+            <br/>
             <p class="p0 justified">
                 There's no his-turn or her-turn (or their-turn), and there's no waiting: Everyone gets to stay engaged and play, all the time. (In games with 4-6 players, you mainly compete against 1 or 2 other players, so this feels manageable: It's not hard to keep up with what your opponents are doing.)
             </p>
             <p class="p0 justified">
                 This game includes several team-based formats, which helps level the playing field when introducing the game to new players and fosters a friendly cooperative-competitive atmosphere.
             </p>
-            <img class="full" src="media/two_arenas.png">
+            <br/>
+            <img class="full" src="img/two_arenas.png">
+            <br/>
             <p class="p0 justified">
                 Titans Of Eden doesn't eliminate players -- everyone plays until the end of the game. At the end, one player (or one team) wins. With this format, a group of six friends can competitively engage each other, with no one being "left out" while the better, more experienced, or luckier players finish alone.
             </p>
