--- a/html/constructed.html
+++ b/html/constructed.html
@@ -17,7 +17,7 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="vid/constructed_video.mp4" type="video.mp4">
+                            <source src="vid/constructed_video.mp4">
                         </video>
                     </div>
 
