--- a/html/privacy.html
+++ b/html/privacy.html
@@ -13,13 +13,13 @@
         <div class="centered text-block">
             <p class="h1">Privacy Policy</p>
             <p class="p1 justified">
-                We're going to keep this simple: We respect your privacy. We will never sell or give away any of your information (including your email address), and we will only use it for the intended purpose: To keep you updated about Titans Of Eden. If you ever want out, just let us know, and we'll permanently delete your email address from our records.
+                We're going to keep this simple: We respect your privacy. We will never sell or give away any of your information (including your email address), and we will only use it for the intended purpose: To keep you updated about Titans Of Eden. If you ever want out, just let us know, and you'll never hear from us again.
             </p>
             <p class="p1 justified">
                 We aim to only send one email each month. While our Kickstarter campaign is live, we may exceed that. You can unsubscribe from our email list at any time by contacting us directly (via the link at the bottom of this page), or by clicking the Unsubscribe button on the bottom of any of the emails we send out.
             </p>
             <p class="p1 justified">
-                Currently, we don't use any cookies to track you.
+                We use Microsoft Clarity to track page views and other basic analytics. For more information, see the <a href="https://docs.microsoft.com/en-us/clarity/faq" class="link">Microsoft Clarity FAQ</a>.
             </p>
             <p class="p1 justified">
                 We plan to update this policy periodically, as needed. Please contact us if you have any questions or concerns.
