using multiple video formats

--- a/html/constructed-text.html
+++ b/html/constructed-text.html
@@ -15,7 +15,9 @@
             <p class="p0 centered"><a href="constructed" class="link">Watch the video overview!</a></p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/constructed_clip.mp4">
+                <source src="vid/constructed_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/constructed_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/constructed_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
