--- a/html/landing.html
+++ b/html/landing.html
@@ -18,8 +18,10 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="vid/landing_video.mp4">
-                        </video>
+                            <source src="vid/landing_video.h265.mp4" type='video/mp4; codecs="hev1"' />
+                            <source src="vid/landing_video.webm" type='video/webm; codecs="vp9"' />
+                            <source src="vid/landing_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                         </video>
                     </div>
 
                     <!-- Video Cover -->
@@ -30,7 +32,9 @@
                     <!-- Loading Screen -->
                     <div class="stacked">
                         <video class="std" id="loading_video" autoplay muted>
-                            <source src="vid/title_video.mp4">
+                            <source src="vid/title_video.h265.mp4" type='video/mp4; codecs="hev1"' />
+                            <source src="vid/title_video.webm" type='video/webm; codecs="vp9"' />
+                            <source src="vid/title_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
                         </video>
                     </div>
                 </div>
