--- a/html/nowait-text.html
+++ b/html/nowait-text.html
@@ -15,7 +15,9 @@
             <p class="p0 centered"><a href="nowait" class="link">Watch the video overview!</a></p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/nowait_clip.mp4">
+                <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
@@ -26,7 +28,9 @@
             </p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/card_flip.mp4">
+                <source src="vid/card_flip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/card_flip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/card_flip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
