--- a/html/empire.html
+++ b/html/empire.html
@@ -17,7 +17,9 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="vid/empire_video.mp4">
+                            <source src="vid/empire_video.h265.mp4" type='video/mp4; codecs="hev1"' />
+                            <source src="vid/empire_video.webm" type='video/webm; codecs="vp9"' />
+                            <source src="vid/empire_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
                         </video>
                     </div>
 
