--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -25,12 +25,16 @@
             </p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/interactive_clip.mp4">
+                <source src="vid/interactive_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/interactive_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/interactive_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/elements_clip.mp4">
+                <source src="vid/elements_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/elements_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/elements_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
@@ -39,7 +43,9 @@
             </p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/empire_clip.mp4">
+                <source src="vid/empire_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/empire_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/empire_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
@@ -48,7 +54,9 @@
             </p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/nowait_clip.mp4">
+                <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 justified">
@@ -57,7 +65,9 @@
             </p>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/constructed_clip.mp4">
+                <source src="vid/constructed_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/constructed_clip.webm" type='video/webm; codecs="vp9"' />
+                <source src="vid/constructed_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
             <br/>
             <p class="p0 centered">Don't just take our word for it, though: Try the <a href="online" class="link">Online Demo</a> today!</p>
