adding av1 video support

--- a/html/constructed.html
+++ b/html/constructed.html
@@ -18,6 +18,7 @@
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
                             <source src="vid/constructed_video.h265.mp4" type='video/mp4; codecs="hev1"' />
+                            <source src="vid/constructed_video.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                             <source src="vid/constructed_video.webm" type='video/webm; codecs="vp9"' />
                             <source src="vid/constructed_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
                         </video>
