--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -26,6 +26,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/interactive_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/interactive_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/interactive_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/interactive_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
@@ -33,6 +34,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/elements_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/elements_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/elements_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/elements_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
@@ -44,6 +46,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/empire_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/empire_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/empire_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/empire_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
@@ -55,6 +58,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/nowait_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
@@ -66,6 +70,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/constructed_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/constructed_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/constructed_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/constructed_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
