--- a/html/nowait-text.html
+++ b/html/nowait-text.html
@@ -16,6 +16,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/nowait_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
@@ -29,6 +30,7 @@
             <br/>
             <video class="std" autoplay loop muted>
                 <source src="vid/card_flip.h265.mp4" type='video/mp4; codecs="hev1"' />
+                <source src="vid/card_flip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
                 <source src="vid/card_flip.webm" type='video/webm; codecs="vp9"' />
                 <source src="vid/card_flip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
             </video>
