improving codec tags

--- a/html/empire.html
+++ b/html/empire.html
@@ -17,10 +17,10 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="vid/empire_video.h265.mp4" type='video/mp4; codecs="hev1"' />
-                            <source src="vid/empire_video.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                            <source src="vid/empire_video.webm" type='video/webm; codecs="vp9"' />
-                            <source src="vid/empire_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                            <source src="vid/empire_video.h265.mp4" type="video/mp4; codecs=hev1" />
+                            <source src="vid/empire_video.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                            <source src="vid/empire_video.vp9.webm" type="video/webm; codecs=vp9" />
+                            <source src="vid/empire_video.h264.mp4" type="video/mp4" />
                         </video>
                     </div>
 
