--- a/html/nowait-text.html
+++ b/html/nowait-text.html
@@ -19,10 +19,10 @@
             <div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/nowait_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/nowait_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/nowait_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/nowait_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/nowait_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
@@ -37,10 +37,10 @@
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/card_flip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/card_flip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/card_flip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/card_flip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/card_flip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/card_flip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/card_flip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/card_flip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
