--- a/html/empire-text.html
+++ b/html/empire-text.html
@@ -19,10 +19,10 @@
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/empire_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/empire_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/empire_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/empire_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/empire_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/empire_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/empire_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/empire_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
