--- a/html/landing.html
+++ b/html/landing.html
@@ -18,10 +18,10 @@
                     <!-- Main Video -->
                     <div class="stacked">
                         <video class="collapsed std" id="primary_video" controls>
-                            <source src="vid/landing_video.h265.mp4" type='video/mp4; codecs="hev1"' />
-                            <source src="vid/landing_video.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                            <source src="vid/landing_video.webm" type='video/webm; codecs="vp9"' />
-                            <source src="vid/landing_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                            <source src="vid/landing_video.h265.mp4" type="video/mp4; codecs=hev1" />
+                            <source src="vid/landing_video.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                            <source src="vid/landing_video.vp9.webm" type="video/webm; codecs=vp9" />
+                            <source src="vid/landing_video.h264.mp4" type="video/mp4" />
                          </video>
                     </div>
 
@@ -33,10 +33,10 @@
                     <!-- Loading Screen -->
                     <div class="stacked">
                         <video class="std" id="loading_video" autoplay muted>
-                            <source src="vid/title_video.h265.mp4" type='video/mp4; codecs="hev1"' />
-                            <source src="vid/title_video.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                            <source src="vid/title_video.webm" type='video/webm; codecs="vp9"' />
-                            <source src="vid/title_video.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                            <source src="vid/title_video.h265.mp4" type="video/mp4; codecs=hev1" />
+                            <source src="vid/title_video.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                            <source src="vid/title_video.vp9.webm" type="video/webm; codecs=vp9" />
+                            <source src="vid/title_video.h264.mp4" type="video/mp4" />
                         </video>
                     </div>
                 </div>
