--- a/html/overview.html
+++ b/html/overview.html
@@ -29,18 +29,18 @@
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/interactive_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/interactive_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/interactive_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/interactive_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/interactive_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/interactive_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/interactive_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/interactive_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/elements_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/elements_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/elements_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/elements_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/elements_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/elements_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/elements_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/elements_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
@@ -51,24 +51,24 @@
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/empire_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/empire_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/empire_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/empire_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/empire_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/empire_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/empire_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/empire_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
                 <p class="p0 justified">
                     <b>Rapid-Fire Gameplay:</b><br/><br/>
-                    Titans Of Eden uses the <a href="nowait-text" class="link">No-Wait Play System</a>, which has all players playing cards every single turn. Unlike other deck-building games, you don't have to spend ~75% of your time just waiting for youur opponents to go.
+                    Titans Of Eden uses the <a href="nowait-text" class="link">No-Wait Play System</a>, which has all players playing cards every single turn. Unlike other deck-building games, you don't have to spend ~75% of your time just waiting for your opponents to go.
                 </p>
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/nowait_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/nowait_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/nowait_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/nowait_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/nowait_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/nowait_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/nowait_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/nowait_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
@@ -79,10 +79,10 @@
             </div>
             <br/>
             <video class="std" autoplay loop muted>
-                <source src="vid/constructed_clip.h265.mp4" type='video/mp4; codecs="hev1"' />
-                <source src="vid/constructed_clip.av1.mp4" type='video/mp4; codecs="av01.0.05M.08"' />
-                <source src="vid/constructed_clip.webm" type='video/webm; codecs="vp9"' />
-                <source src="vid/constructed_clip.h264.mp4" type='video/mp4; codecs="avc1.42E01E"' />
+                <source src="vid/constructed_clip.h265.mp4" type="video/mp4; codecs=hev1" />
+                <source src="vid/constructed_clip.av1.mp4" type="video/mp4; codecs=av01.0.09M.08" />
+                <source src="vid/constructed_clip.vp9.webm" type="video/webm; codecs=vp9" />
+                <source src="vid/constructed_clip.h264.mp4" type="video/mp4" />
             </video>
             <br/>
             <div>
